src/modules/70-pipeline/components/PipelineDiagram/Nodes/DiamondNode/DiamondNode.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.diamond {
  transform: rotate(45deg);
  position: absolute;

  &.top {
    top: -12px;
  }

  :global(.execution-running-animation) {
    &::before {
      --node-running-transform-start: translate3d(-100%, -100%, 0) rotate(-45deg);
      --node-running-transform-end: translate3d(100%, 100%, 0) rotate(-45deg);
    }
  }

  .horizontalBar {
    position: absolute;
    width: 100%;
    transform: rotate(-45deg);
  }

  & > span,
  .iconImage {
    transform: rotate(-45deg);
  }
  & > div.diamondPortIn {
    top: calc(80% + 4px);
  }
  & > div.diamondPortOut {
    top: calc(-20% + 4px);
  }
  .diamondClose {
    transform: rotate(-45deg);
    top: 40px;
    left: -20px;
  }

  .secondaryIcon {
    position: absolute;
    transform: rotate(-45deg);
    top: -11px;
    left: 30px;
  }

  .tertiaryIcon {
    position: absolute;
    transform: rotate(-45deg);
    top: -17px;
    left: 6px;
    background: var(--pipeline-barrier-yellow) !important;
    border: 2px solid var(--grey-0);
    border-radius: 50%;
    padding: 1px !important;
  }

  .template {
    position: absolute;
    bottom: 5px;
    left: 5px;
  }

  .loopingStrategy {
    position: absolute;
    transform: rotate(-45deg);
    top: 2px;
    right: 5px;
  }

  .conditional {
    position: absolute;
    transform: rotate(-45deg);
    top: -17px;
    left: 13px;
    color: var(--white) !important;
  }

  .incomplete {
    position: absolute;
    top: 2px;
    right: 6px;
  }
}
.primaryIcon {
  &:global(.bp3-icon) {
    svg {
      path {
        fill: currentColor !important;
      }
    }
  }
}

